@@ -119,6 +119,19 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.5.2</version>
+					<configuration>
+						<argLine>
+            				@{argLine} --add-opens java.base/java.util=ALL-UNNAMED
+						</argLine>
+						<systemPropertyVariables>
+							<java.awt.headless>false</java.awt.headless>
+						</systemPropertyVariables>
+					</configuration>
+				</plugin>
+				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
 					<version>${jacoco.version}</version>
@@ -211,6 +224,13 @@
 							</configuration>
 						</execution>
 					</executions>
+					<configuration>
+						<argLine>@{argLine} --add-opens java.base/java.util=ALL-UNNAMED</argLine>
+						<systemPropertyVariables>
+							<postgres.mapped.port>${postgres.mapped.port}</postgres.mapped.port>
+							<java.awt.headless>false</java.awt.headless>
+						</systemPropertyVariables>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.sonarsource.scanner.maven</groupId>
